--- a/src/resources/css/Authpage/auth.css
+++ b/src/resources/css/Authpage/auth.css
@@ -56,6 +56,32 @@
     cursor: pointer;
 }
 
+.password-checker {
+    display: flex;
+    width: 100%;
+    background-color: #88665a7c;
+    border-radius: 15px;
+}
+
+.password-checker-bg {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: left;
+    width: 100%;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 10px;
+    gap: 10px;
+    background-color: #ebebeb;
+}
+
+.password-checker-item {
+    display: flex;
+    gap: 5px;
+    font-size: small;
+}
+
 .auth-info {
     font-size: 12px;
 }
