--- a/src/resources/css/Homepage/carousel.css
+++ b/src/resources/css/Homepage/carousel.css
@@ -1,6 +1,5 @@
 .featured-carousel {
     display: flex;
-    /* width: 100vw; */
     height: 400px;
     justify-content: center;
     background-color: var(--base-color);
@@ -9,7 +8,7 @@
 .featured-carousel-shift-btn {
     height: 50px;
     width: 50px;
-    position: relative;
+    position: absolute;
     top: 50%;
     font-size: 40px;
 }
