--- a/src/resources/css/Homepage/recommendation.css
+++ b/src/resources/css/Homepage/recommendation.css
@@ -1,51 +1,57 @@
 .recommendation {
-    width: 100vw;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    padding: 30px 0px;
+  width: 100vw;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding: 30px 0px;
 }
 
 .recommendation-tab-headers {
-    display: flex;
-    gap: 10px;
-    padding: 15px 0px;
+  display: flex;
+  gap: 10px;
+  padding: 15px 0px;
 }
 
 .recommendation-tab-display {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    width: 100vw;
-    height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100vw;
+  height: 100%;
 }
 
 .tab-row {
-    display: flex;
+  display: flex;
 }
 
 .tab-product {
-    display: flex;
-    flex-flow: column;
-    width: 20vw;
-    margin: 15px;
+  display: flex;
+  flex-flow: column;
+  width: 20vw;
+  margin: 15px;
+  cursor: pointer;
 }
 
 .tab-product-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  width: 100%;
 }
 
 .tab-product-image img {
-    height: 250px;
+  height: 250px;
+  transition: transform ease-in-out 100ms;
+}
+
+.tab-product:hover .tab-product-image img{
+  transform: scale(0.95);
 }
 
 .tab-product-info {
-    display: flex;
-    flex-flow: column;
-    gap: 5px;
-    margin: 10px 0px;
+  display: flex;
+  flex-flow: column;
+  gap: 5px;
+  margin: 10px 0px;
 }
