--- a/client/src/styles/zUsed/carousel.css
+++ b/client/src/styles/zUsed/carousel.css
@@ -1,11 +1,11 @@
-.featured-carousel {
+/* .featured-carousel {
     display: flex;
     height: 400px;
     justify-content: center;
     background-color: var(--base-color);
-}
+} */
 
-.featured-carousel-shift-btn {
+/* .featured-carousel-shift-btn {
     height: 50px;
     width: 50px;
     position: absolute;
@@ -15,16 +15,16 @@
 
 .featured-carousel-shift-btn:hover {
     cursor: pointer;
-}
+} */
 
-.featured-carousel-slider {
+/* .featured-carousel-slider {
     display: flex;
     position: relative; 
     width: 80vw;
     transition: transform ease-out 500ms;
-}
+} */
 
-.featured-carousel-item {
+/* .featured-carousel-item {
     display: flex;
     position: absolute;
     width: 100%;
@@ -32,35 +32,35 @@
     justify-content: space-between;
     gap: 10%;
     inset: 0;
-}
+} */
 
-.carousel-item-left {
+/* .carousel-item-left {
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: start;
     gap: 2.5rem;
-}
+} */
 
-.carousel-item-left button {
+/* .carousel-item-left button {
     all: unset;
     background-color: var(--btn-color);
     color: var(--text-color-light);
     font-weight: normal;
     padding: 10px 50px;
     border-radius: 5px;
-}
+} */
 
-.carousel-item-right {
+/* .carousel-item-right {
     display: flex;
     align-items: center;
     width: 50%;
     height: 100%;
     overflow: hidden;
-}
+} */
 
-.carousel-item-right img {
+/* .carousel-item-right img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+} */
