--- a/client/src/styles/zUsed/footer.css
+++ b/client/src/styles/zUsed/footer.css
@@ -1,13 +1,13 @@
-.footer-ribbon {
+/* .footer-ribbon {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   width: 100vw;
   height: 100px;
   background-color: green;
-}
+} */
 
-.ribbon-item {
+/* .ribbon-item {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -16,60 +16,60 @@
 
 .ribbon-item-text {
   font-size: 13px;
-}
+} */
 
-.footer-tab {
+/* .footer-tab {
   width: 100vw;
   display: grid;
   padding: 30px 0px;
   grid-template-columns: 1fr 3fr;
-}
+} */
 
-.footer-tab-sections {
+/* .footer-tab-sections {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   font-size: 13px;
-}
+} */
 
-.footer-section {
+/* .footer-section {
   display: flex;
   flex-flow: column;
   gap: 20px;
-}
+} */
 
-.footer-section-header p {
+/* .footer-section-header p {
   font-weight: 700;
-}
+} */
 
-.footer-section-options {
+/* .footer-section-options {
   display: flex;
   flex-flow: column;
   gap: 10px;
-}
+} */
 
-.footer-section-options p {
+/* .footer-section-options p {
   cursor: pointer;
-}
+} */
 
-.footer-section-options p:hover {
+/* .footer-section-options p:hover {
   font-weight: 600;
-}
+} */
 
-.footer-search {
+/* .footer-search {
   display: flex;
   flex-flow: column;
   align-items: center;
   width: 100vw;
   padding: 30px 0px 50px 0px;
   gap: 10px;
-}
+} */
 
-.footer-search-bar {
+/* .footer-search-bar {
     display: flex;
     gap: 10px;
-}
+} */
 
-.footer-search-bar-btn {
+/* .footer-search-bar-btn {
     all: unset;
     background-color: black;
     color: #fff;
@@ -77,14 +77,14 @@
     font-size: 12px;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
-.footer-search-bar-btn:hover {
+/* .footer-search-bar-btn:hover {
     background-color: rgb(39, 39, 39);
-}
+} */
 
-.footer-search p {
+/* .footer-search p {
     cursor: none;
     font-size: 12px;
     font-weight: 600;
-}
+} */
