--- a/client/src/styles/zUsed/navbar.css
+++ b/client/src/styles/zUsed/navbar.css
@@ -1,4 +1,4 @@
-.nav-bar {
+/* .nav-bar {
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -6,26 +6,26 @@
   background-color: var(--base-color);
   padding: 10px 0px;
   gap: 10px;
-}
+} */
 
-.nav-bar-upper {
+/* .nav-bar-upper {
   display: flex;
   width: 80%;
   justify-content: space-between;
   align-items: center;
-}
+} */
 
-.nav-bar-upper img {
+/* .nav-bar-upper img {
   height: 50px;
   width: auto;
-}
+} */
 
-.nav-icons {
+/* .nav-icons {
   display: flex;
   gap: 20px;
-}
+} */
 
-.nav-icon {
+/* .nav-icon {
   display: flex;
   flex-flow: column;
   gap: 5px;
@@ -33,21 +33,21 @@
   align-items: center;
   font-size: 18px;
   cursor: pointer;
-}
+} */
 
-.nav-icon p {
+/* .nav-icon p {
   font-size: 12px;
-}
+} */
 
-.nav-bar-lower {
+/* .nav-bar-lower {
   display: flex;
   width: 80%;
   justify-content: center;
   gap: 30px;
-}
+} */
 
-.nav-bar-lower a {
+/* .nav-bar-lower a {
   text-decoration: none;
   font-size: 18px;
   color: var(--text-color-dark);
-}
+} */
