--- a/client/src/styles/Homepage/recommendation.css
+++ b/client/src/styles/Homepage/recommendation.css
@@ -1,69 +1,69 @@
-.recommendation {
+/* .recommendation {
   width: 100vw;
   display: flex;
   flex-flow: column;
   align-items: center;
   padding: 30px 0px;
-}
+} */
 
-.recommendation-tab-headers {
+/* .recommendation-tab-headers {
   display: flex;
   gap: 15px;
   padding: 15px 0px;
-}
+} */
 
-.recommendation-tab-headers > button {
+/* .recommendation-tab-headers > button {
   all: unset;
   font-size: 12px;
   font-weight: 700;
   cursor: pointer;
-}
+} */
 
 .recommendation-tab-headers .active {
   color: var(--btn-color);
   border-bottom: 1px solid var(--btn-color);
 }
 
-.recommendation-tab-display {
+/* .recommendation-tab-display {
   display: flex;
   flex-flow: column;
   align-items: center;
   width: 100vw;
   height: 100%;
-}
+} */
 
-.tab-row {
+/* .tab-row {
   display: flex;
-}
+} */
 
-.tab-product {
+/* .tab-product {
   display: flex;
   flex-flow: column;
   width: 20vw;
   margin: 15px;
   cursor: pointer;
-}
+} */
 
-.tab-product-image {
+/* .tab-product-image {
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
   width: 100%;
-}
+} */
 
-.tab-product-image img {
+/* .tab-product-image img {
   height: 250px;
   transition: transform ease-in-out 100ms;
-}
+} */
 
-.tab-product:hover .tab-product-image img{
+/* .tab-product:hover .tab-product-image img{
   transform: scale(0.95);
-}
+} */
 
-.tab-product-info {
+/* .tab-product-info {
   display: flex;
   flex-flow: column;
   gap: 5px;
   margin: 10px 0px;
-}
+} */
